--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,7 @@
     "description": "web app",
     "require": {
         "php": ">=5.5.0",
-        "lynxgroup/container": "dev-master",
-        "lynxgroup/odm": "dev-master",
-        "lynxgroup/middleware": "dev-master",
-        "lynxgroup/http": "dev-master"
+        "lynxgroup/container": "dev-master"
     },
     "autoload": {
         "psr-4": {
