--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "library",
     "description": "web app",
     "require": {
-        "php": ">=5.5.0",
-        "lynxgroup/container": "dev-master"
+        "php": ">=5.5.0"
     },
     "autoload": {
         "psr-4": {
